--- a/style.css
+++ b/style.css
@@ -1,4 +1,64 @@
+@font-face {
+    font-family: "Norse-Bold";
+    src: url("Norse-Bold.otf") format("opentype");
+}
+
 * {
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+body {
+    display: flex;
+}
+
+.sidebar {
+    position: relative;
+    width: 40%;
+}
+
+.sidebar__image {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+.sidebar__image-credit {
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    color: #fff;
+    font-size: 12px;
+}
+
+.sidebar__image-credit a {
+    color: #fff;
+}
+
+.logo {
+    position: absolute;
+    top: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgb(0, 0, 0, .5);
+    color: #fff;
+    width: 100%;
+    padding: 10px 0;
+}
+
+.logo__icon {
+    width: 15%;
+}
+
+.logo__text {
+    font-family: "Norse-Bold";
+    text-transform: uppercase;
+    font-size: 85px;
+    margin-top: 20px;
 }
